--- a/juegosDeMesa.html
+++ b/juegosDeMesa.html
@@ -1,117 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-    <title>Juegos de mesa - Estratégia</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Juegos de mesa, sobre estratégia">
-    <meta name="keywords" content="cds,juegos,cartas,colecciones">
-    <meta name="author" content="Ing.Tomas">
+        <title>Juegos de mesa - Estratégia</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Juegos de mesa, sobre estratégia">
+        <meta name="keywords" content="cds,juegos,cartas,colecciones">
+        <meta name="author" content="Ing.Tomas">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
-    <body>
-        <header>
-            <nav>
-                <ul class="nav-bar">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="cdsMetal&Rock.html">Cd's Power Metal</a></li>
-                    <li><a href="juegosDeMesa.html">Juegos de mesa</a></li>
-                    <li><a href="literaturaFantastica.html">Literatura fantástica</a></li>
-                    <li><a href="cartasColeccionables.html">Cartas RPG Magic The Gathering</a></li>
-                    <li><a href="Contactanos.html">Contáctanos</a></li>
-                    <li class="login-container">
-                        <form id="login-form">
-                            <label for="email">Email:</label>
-                            <input type="email" id="email" name="email" required>
-                            <label for="password">Contraseña:</label>
-                            <input type="password" id="password" name="password" required>
-                            <button type="submit">Iniciar sesión</button>
-                        </form>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <h2 class="h2">Juegos de estratégia</h2>
-            <article class="articulo-genero">
-                <h3 class="h3">juegos de mesa traducidos y con envío gratis</h3>
-                <p>Traemos este mes, 4 juegos de mesa muy difíciles de conseguir, traduccidos al español, con envío gratis.Ediciones de colección</p>
-            </article>
-            <section id="Juegos">
-                <h3 class="h3">Ofertas del Mes</h3>
-                <div class="juego">
-                    <div class="game-header">
-                        <img src="99a.jpg" alt="juego 1">
-                        <div class="reseña">
-                        <h3>Colonos de Catán</h3>
-                    </div>
-                        <p>Colonos de Catán es un fantástico juego de mesa de gestión de recursos para toda la familia y que tiene que estar presente en todas las ludotecas.
-                            El objetivo del juego es construir pueblos, ciudades y caminos sobre un tablero que es distinto cada vez, 
-                            mientras se van acumulando varios tipos de cartas. Todos estos elementos proporcionan distintas puntuaciones, ganando la partida el primer 
-                            jugador que llega a los diez puntos.</p>
-                    </div>
-                    <div class="precio">
-                        <p>$67.000</p>
-                        <button>Comprar</button>
+    <body id="juego">
+    <header>
+        <nav>
+            <ul class="nav-bar">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="cdsMetal&Rock.html">Cd's Power Metal</a></li>
+                <li><a href="juegosDeMesa.html">Juegos de mesa</a></li>
+                <li><a href="literaturaFantastica.html">Literatura fantástica</a></li>
+                <li><a href="contactanos.html">Contáctanos</a></li>
+                <li class="login-container">
+                    <form id="login-form">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                        <label for="password">Contraseña:</label>
+                        <input type="password" id="password" name="password" required>
+                        <button type="submit">Iniciar sesión</button>
+                    </form>
+                </li>
+                <li><a href="carrito.html"><i class="fas fa-shopping-cart fa-3x"></i> Carrito</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2 class="h2">Juegos de estratégia</h2>
+        <article class="articulo-genero">
+            <h3 class="h3">juegos de mesa traducidos y con envío gratis</h3>
+            <p>Traemos este mes, 4 juegos de mesa muy difíciles de conseguir, traduccidos al español, con envío gratis.Ediciones de colección</p>
+        </article>
+            <h3 class="ofertas-del-mes">Ofertas del Mes</h3>
+        <section id ="juegos" class="grid-container">
+            <div class="juego-item" data-id="9">
+                <img src="images/99a.jpg" alt="juego 1">
+                <button class="info-btn" data-id="9">Más información!</button>
+                <div class="juego-info">
+                    <h3>Colonos de Catán</h3>
+                    <p>Colonos de Catán es un fantástico juego de mesa de gestión de recursos para ...</p>
+                    <div class="juego-footer">
+                        <p class="precio">$67000</p>
+                    <button class="add-to-cart" data-id="9">Agregar al carrito</button>
                     </div>
                 </div>
-                <div class="juego">
-                    <div class="game-header">
-                        <img src="88a.jpg" alt="juego 2">
-                        <div class="reseña">
-                        <h3>Krieg</h3>
-                    </div>
-                        <p>Juego de estrategia, inteligencia y azar.El juego de la conquista del mundo, pon a prueba tu habilidad, podrás cumplir tu misión sin ser derrotado?
-                            Estás a punto de ingresar y conocer la verdadera sensación de lo que fue la segunda guerra mundial.
-                            Deberás desarrollar estrategias para atacar, defenderte, desplazar tropas a través de los continentes y de esa manera lograr exitosamente tu objetivo.</p>
-                    </div>
-                    <div class="precio">
-                        <p>$73.000</p>
-                        <button>Comprar</button>
-                    </div>
-                </div>
-                <div class="juego">
-                    <div class="game-header">
-                        <img src="77a.jpg" alt="juego 3">
-                        <div class="reseña">
-                        <h3>Los castillos de Borgoña (the castle of Burgundy)</h3>
-                    </div>
-                    <p>Los Castillos de Borgoña se encuentran en la región de Borgoña de la Alta Francia medieval. Cada jugador asume el papel de un aristócrata, controlando originalmente un pequeño principado. 
-                            Mientras juegan, su objetivo es construir asentamientos y poderosos castillos, practicar el comercio a lo largo del río, explotar minas de plata y usar el conocimiento de los viajeros.
-                            El juego se trata de jugadores que toman fichas de asentamiento del tablero de juego y las colocan en su princedom, que está representado por el tablero de jugadores. Cada mosaico tiene una función que comienza cuando el mosaico se coloca en el princedom. 
-                            El propio principado consta de varias regiones, cada una de las cuales exige su propio tipo de mosaico de asentamiento.</p>
-                    </div>
-                    <div class="precio">
-                        <p>$73.000</p>
-                        <button>Comprar</button>
-                    </div>
-                </div>
-                <div class="juego">
-                    <div class="game-header">
-                        <img src="66a.jpg" alt="juego 4">
-                        <div class="reseña">
-                        <h3>Civilization -Un nuevo amanecer, juego de mesa-</h3>
-                    </div>
-                        <p>Civilization es un juego de mesa diseñado por Francis Tresham, publicado en Reino Unido en 1980 por Hartland Trefoil y en Estados Unidos en 1981 por Avalon Hill. 
-                            La marca Civilization ahora es propiedad de Hasbro. Estuvo agotado durante muchos años, antes de que Gibsons Games lo reeditara en 2018, 
-                            y si te preguntas si tiene algo que ver con el famoso juego de estrategia para pc, la respuesta es si.</p>
-                    </div>
-                    <div class="precio">
-                        <p>$93.000</p>
-                        <button>Comprar</button>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer class="footer">
-            <div class="social-media">
-                <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-                <a href="https://www.twitter.com" target="_blank"><img src="gorjeo.png" alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
             </div>
+            <div class="juego-item" data-id="10">
+                <img src="images/88a.jpg" alt="juego 2">
+                <button class="info-btn" data-id="10">Más información!</button>
+                <div class="juego-info">
+                    <h3>Krieg</h3>
+                    <p>Juego de estrategia, inteligencia y azar.El juego de la conquista del mundo...</p>
+                    <div class="juego-footer">
+                        <p class="precio">$73000</p>
+                    <button class="add-to-cart" data-id="10">Agregar al carrito</button>
+                    </div>
+                </div>
+            </div>
+            <div class="juego-item" data-id="11">
+                <img src="images/77a.jpg" alt="juego 3">
+                <button class="info-btn" data-id="11">Más información!</button>
+                <div class="juego-info">
+                    <h3>Los castillos de Borgoña (the castle of Burgundy)</h3>
+                    <p>Los Castillos de Borgoña se encuentran en la región de Borgoña de la Alta Francia medieval. Cada ...</p>
+                    <div class="juego-footer">
+                        <p class="precio">$73000</p>
+                    <button class="add-to-cart" data-id="11">Agregar al carrito</button>
+                    </div>
+                </div>
+            </div>
+            <div class="juego-item" data-id="12">
+                <img src="images/66a.jpg" alt="juego 4">
+                <button class="info-btn" data-id="12">Más información!</button>
+                <div class="juego-info">
+                    <h3>Civilization : Un nuevo amanecer</h3>
+                    <p>Civilization es un juego de mesa diseñado por Francis Tresham, publicado en Reino Unido en 1980 por ...</p>
+                    <div class="juego-footer">
+                        <p class="precio">$93000</p>
+                    <button class="add-to-cart" data-id="12">Agregar al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="social-media">
+            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="images/gorjeo.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+        </div>
             <p class="parrafoFinal">
             2024 Epic Collections. Todos los derechos reservados.
             </p>
-        </footer>
+    </footer>
+        <div id="mensaje-notificacion" class="mensaje-notificacion"></div>
+        <script src="script3.js" defer></script>
     </body>
-</html> 
+</html>
